--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -74,14 +74,17 @@
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div>
+							<div style="float:left">
 								<img src="../images/20200502_143812.jpg" alt="picture 1"
 									width="560" height="340" align="center">
 							</div>
-							<iframe width="560" height="315"
-								src="https://www.youtube.com/embed/rvUfekJhyeg" frameborder="0"
-								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-								allowfullscreen></iframe>
+							<div>
+								<iframe width="560" height="315"
+									src="https://www.youtube.com/embed/rvUfekJhyeg" frameborder="0"
+									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;"
+									allowfullscreen></iframe>
+							</div>
+
 							<h1>소고기덮밥(30분)</h1>
 							<ol>
 								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
