--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -74,7 +74,7 @@
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div style="float:left">
+							<div style="float: left">
 								<img src="../images/20200502_143812.jpg" alt="picture 1"
 									width="560" height="340" align="center">
 							</div>
@@ -119,6 +119,12 @@
 							<div>
 								<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="560"
 									height="340" align="center">
+							</div>
+							<div>
+								<iframe width="560" height="315"
+									src="https://www.youtube.com/embed/7m_yRTn9wws" frameborder="0"
+									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
 							</div>
 							<h1>메밀국수(자루소바)(30분)</h1>
 							<ol>
