--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -74,7 +74,7 @@
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div style="float: left; overflow: hidden;" >
+							<div style="float: left; overflow: hidden;">
 								<img src="../images/20200502_143812.jpg" alt="picture 1"
 									width="560" height="340" align="center">
 							</div>
@@ -165,6 +165,12 @@
 							<div>
 								<img src="../images/20200502_163430.jpg" alt="picture 3"
 									width="560" height="340" align="center">
+							</div>
+							<div>
+								<iframe width="560" height="315"
+									src="https://www.youtube.com/embed/rvUfekJhyeg" frameborder="0"
+									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; overflow: hidden"
+									allowfullscreen></iframe>
 							</div>
 							<h1>전복버터구이(25분)</h1>
 							<ol>
