--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -38,7 +38,7 @@
 						<li class="active"><a href="#no10">대합맑은국</a></li>
 						<li class="active"><a href="#no11">갑오징어명란무침</a></li>
 						<li class="active"><a href="#no12">야끼우동</a></li>
-                        <li class="active"><a href="#no13">소고기조림</a></li>
+                        <li class="active"><a href="#no13">소고기간장구이</a></li>
 						<li class="active"><a href="#no14">된장국</a></li>
 						<li class="active"><a href="#no15">생선초밥</a></li>
 					</ul>
