--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -77,7 +77,7 @@
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div style="float: left; overflow: hidden;">
+							<div style="float: left; position: relative;">
 								<img src="../images/20200502_143812.jpg" alt="picture 1"
 									width="560" height="340" align="center">
 							</div>
