--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -38,7 +38,7 @@
 						<li class="active"><a href="#no10">대합맑은국</a></li>
 						<li class="active"><a href="#no11">갑오징어명란무침</a></li>
 						<li class="active"><a href="#no12">야끼우동</a></li>
-                        <li class="active"><a href="#no13">소고기간장구이</a></li>
+						<li class="active"><a href="#no13">소고기간장구이</a></li>
 						<li class="active"><a href="#no14">된장국</a></li>
 						<li class="active"><a href="#no15">생선초밥</a></li>
 					</ul>
@@ -426,6 +426,84 @@
 									width="560" height="340" align="center">
 							</div>
 							<h1>야끼우동</h1>
+							<ol>
+								<li>숙주: 거두절미.</li>
+								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
+								<li>새우: 내장 껍질 제거.</li>
+								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
+								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
+								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
+									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<br />* 시간 없음
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
+								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
+								<br />다. 우동은 데쳐 사용하시오.
+								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="no13" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200516_162530.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
+							<h1>소고기간장구이</h1>
+							<ol>
+								<li>숙주: 거두절미.</li>
+								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
+								<li>새우: 내장 껍질 제거.</li>
+								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
+								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
+								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
+									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<br />* 시간 없음
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
+								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
+								<br />다. 우동은 데쳐 사용하시오.
+								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="no14" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200516_162530.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
+							<h1>된장국</h1>
+							<ol>
+								<li>숙주: 거두절미.</li>
+								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
+								<li>새우: 내장 껍질 제거.</li>
+								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
+								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
+								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
+									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<br />* 시간 없음
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
+								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
+								<br />다. 우동은 데쳐 사용하시오.
+								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="no15" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /> <br /> <br />
+							<div>
+								<img src="../images/20200516_162530.jpg" alt="picture 1"
+									width="560" height="340" align="center">
+							</div>
+							<h1>생선초밥</h1>
 							<ol>
 								<li>숙주: 거두절미.</li>
 								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
