--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -453,13 +453,12 @@
 							</div>
 							<h1>소고기간장구이</h1>
 							<ol>
-								<li>숙주: 거두절미.</li>
-								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
-								<li>새우: 내장 껍질 제거.</li>
-								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
-								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
-								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
-									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<li>다시물 1/2C.</li>
+								<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게 조리기.</li>
+								<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
+								<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
+								<li>팬에 기름 두르고 살짝 구운 후 다래소스 발라가며 굽기 + 미디엄.</li>
+								<li>고기 길이 3cm, 두께 1.5cm로 잘라 깻잎 위에 올리고 산초가루, 하리쇼가 올려 마무리.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
