--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -459,7 +459,7 @@
 								<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
 								<li>팬에 기름 두르고 살짝 구운 후 다래소스 발라가며 굽기 + 미디엄.</li>
 								<li>고기 길이 3cm, 두께 1.5cm로 잘라 깻잎 위에 올리고 산초가루, 하리쇼가 올려 마무리.</li>
-								<br />* 시간 없음
+								<br />* 시간 많음
 								<br />
 								<br />
 								<h3>요구사항</h3>
@@ -478,14 +478,13 @@
 							</div>
 							<h1>된장국</h1>
 							<ol>
-								<li>숙주: 거두절미.</li>
-								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
-								<li>새우: 내장 껍질 제거.</li>
-								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
-								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
-								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
-									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
-								<br />* 시간 없음
+								<li>가쓰오다시 2C.</li>
+								<li>미역: 불린 후 데치기(많이 불리면 안 데쳐도 됨) - 1~2cm 성형.</li>
+								<li>두부: 사방 1cm 후 데치기.</li>
+								<li>실파: 송송.</li>
+								<li>냄비에 가쓰오다시 2C - 끓으면 된장 1T + 청주 1T - 불순물 제거 - 두부 토렴(살짝 데치기).</li>
+								<li>완성 접시에 두부, 미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
+								<br />* 시간 많음
 								<br />
 								<br />
 								<h3>요구사항</h3>
