--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -503,8 +503,8 @@
 							</div>
 							<h1>생선초밥</h1>
 							<ol>
-								<li>숙주: 거두절미.</li>
-								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
+								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
+								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
 								<li>새우: 내장 껍질 제거.</li>
 								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
 								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
