--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -505,11 +505,13 @@
 							<ol>
 								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
 								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
-								<li>새우: 내장 껍질 제거.</li>
-								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
-								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
-								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
-									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+								<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
+								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
+								<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
+								<li>광어, 도미: 껍질 제거 후 7*3cm 포.</li>
+								<li>꽁치: 세장 뜨기 - 겉껍질 제거 후 잔 칼집.</li>
+								<li>밥: 오른손 / 생선: 왼손 - 와사비 올려 모양 잡기.</li>
+								<li>완성 접시 - 깻잎, 초생강(장미), 초밥 8개 + 간장종지 제출.</li>
 								<br />* 시간 없음
 								<br />
 								<br />
