--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -463,10 +463,9 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
-								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
-								<br />다. 우동은 데쳐 사용하시오.
-								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
+								<br />가. 양념간장(다래)과 생강채(하리쇼가)를 준비하시오.
+								<br />나. 소고기를 두께 1.5cm, 길이 3cm로 자르시오.
+								<br />다. 프라이팬에 구이를 한 다음 양념간장(다래)을 발라 완성하시오.
 							</ol>
 						</section>
 						<hr />
