--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -487,10 +487,9 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
-								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
-								<br />다. 우동은 데쳐 사용하시오.
-								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
+								<br />가. 다시마와 가다랑어포(가쓰오부시)로 가다랑어국물(가쓰오다시)을 만드시오.
+								<br />나. 1cm * 1cm * 1cm 로 썬 두부와 미역은 데쳐 사용하시오.
+								<br />다. 된장을 풀어 한소끔 끓여 내시오.
 							</ol>
 						</section>
 						<hr />
