--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -514,10 +514,12 @@
 								<br />
 								<br />
 								<h3>요구사항</h3>
-								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
-								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
-								<br />다. 우동은 데쳐 사용하시오.
-								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
+								<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
+								<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
+								<br />다. 곁들일 초생강을 만드시오.
+								<br />라. 쥔초밥(니기리스시)을 만드시오.
+								<br />마. 생선초밥 8개를 만들어 제출하시오.
+								<br />바. 간장을 곁들여 내시오.
 							</ol>
 						</section>
 						<hr />
