--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -77,15 +77,18 @@
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div style="float: left; position: relative;">
-								<img src="../images/20200502_143812.jpg" alt="picture 1"
-									width="560" height="340" align="center">
-							</div>
-							<div>
-								<iframe width="560" height="315"
-									src="https://www.youtube.com/embed/rvUfekJhyeg" frameborder="0"
-									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; overflow: hidden"
-									allowfullscreen></iframe>
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/20200502_143812.jpg" alt="picture 1"
+										width="513" height="312">
+								</div>
+								<div id="youtube">
+									<iframe width="513" height="312"
+										src="https://www.youtube.com/embed/rvUfekJhyeg"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;"
+										allowfullscreen></iframe>
+								</div>
 							</div>
 
 							<h1>소고기덮밥(30분)</h1>
@@ -119,15 +122,18 @@
 						<hr />
 						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div>
-								<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="560"
-									height="340" align="center">
-							</div>
-							<div>
-								<iframe width="560" height="315"
-									src="https://www.youtube.com/embed/7m_yRTn9wws" frameborder="0"
-									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-									allowfullscreen></iframe>
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="513"
+										height="312" align="center">
+								</div>
+								<div id="youtube">
+									<iframe width="513" height="312"
+										src="https://www.youtube.com/embed/7m_yRTn9wws"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
 							</div>
 							<h1>메밀국수(자루소바)(30분)</h1>
 							<ol>
@@ -454,7 +460,8 @@
 							<h1>소고기간장구이</h1>
 							<ol>
 								<li>다시물 1/2C.</li>
-								<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게 조리기.</li>
+								<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게
+									조리기.</li>
 								<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
 								<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
 								<li>팬에 기름 두르고 살짝 구운 후 다래소스 발라가며 굽기 + 미디엄.</li>
@@ -481,7 +488,8 @@
 								<li>미역: 불린 후 데치기(많이 불리면 안 데쳐도 됨) - 1~2cm 성형.</li>
 								<li>두부: 사방 1cm 후 데치기.</li>
 								<li>실파: 송송.</li>
-								<li>냄비에 가쓰오다시 2C - 끓으면 된장 1T + 청주 1T - 불순물 제거 - 두부 토렴(살짝 데치기).</li>
+								<li>냄비에 가쓰오다시 2C - 끓으면 된장 1T + 청주 1T - 불순물 제거 - 두부 토렴(살짝
+									데치기).</li>
 								<li>완성 접시에 두부, 미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
 								<br />* 시간 많음
 								<br />
