--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -171,15 +171,18 @@
 						<hr />
 						<section id="no3" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200502_163430.jpg" alt="picture 3"
-									width="560" height="340" align="center">
-							</div>
-							<div>
-								<iframe width="560" height="315"
-									src="https://www.youtube.com/embed/rvUfekJhyeg" frameborder="0"
-									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; overflow: hidden"
-									allowfullscreen></iframe>
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/20200502_163430.jpg" alt="picture 3"
+										width="513" height="312" align="center">
+								</div>
+								<div>
+									<iframe width="513" height="312"
+										src="https://www.youtube.com/embed/rvUfekJhyeg"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; overflow: hidden"
+										allowfullscreen></iframe>
+								</div id="youtube">
 							</div>
 							<h1>전복버터구이(25분)</h1>
 							<ol>
