--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -252,9 +252,18 @@
 						<hr />
 						<section id="no5" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200509_145051.jpg" alt="picture 5"
-									width="560" height="340" align="center">
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/20200509_145051.jpg" alt="picture 5"
+										width="513" height="312" align="center">
+								</div>
+								<div id="youtube">
+									<iframe width="513" height="312"
+										src="https://www.youtube.com/embed/UZoBfp89G8U"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
 							</div>
 							<h1>도미술찜</h1>
 							<ol>
