--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -290,9 +290,18 @@
 						<hr />
 						<section id="no6" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200509_145054.jpg" alt="picture 6"
-									width="560" height="340" align="center">
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/20200509_145054.jpg" alt="picture 6"
+										width="560" height="340" align="center">
+								</div>
+								<div id="youtube">
+									<iframe width="513" height="312"
+										src="https://www.youtube.com/embed/SCaYHUfW81g"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
 							</div>
 							<h1>해삼초회(20분)</h1>
 							<ol>
@@ -319,9 +328,18 @@
 						<hr />
 						<section id="no7" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200509_173912.jpg" alt="picture 7"
-									width="560" height="340" align="center">
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/20200509_173912.jpg" alt="picture 7"
+										width="560" height="340" align="center">
+								</div>
+								<div id="youtube">
+									<iframe width="513" height="312"
+										src="https://www.youtube.com/embed/SCaYHUfW81g"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
 							</div>
 							<h1>도미머리맑은국(30분)</h1>
 							<ol>
@@ -351,212 +369,259 @@
 								<img src="../images/20200509_163756.jpg" alt="picture 8"
 									width="560" height="340" align="center">
 							</div>
-							<h1>도미조림</h1>
-							<ol>
-								<li>다시물 1C.</li>
-								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형
-									- 소금, 데치기.</li>
-								<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
-								<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
-								<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
-								<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고
-									꽈리고추(색 변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
-								<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
-								<br />* 시간 없음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 손질한 도미를 5~6cm로 자르고 머리는 반으로 갈라 소금을 뿌리시오.
-								<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
-								<br />다. 냄비에 앉혀 양념하여 조리하시오.
-								<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
-							</ol>
-						</section>
-						<hr />
-						<section id="no9" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_144207.jpg" alt="picture 1"
-									width="560" height="340" align="center">
+							<div id="youtube">
+								<iframe width="513" height="312"
+									src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
+									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+									allowfullscreen></iframe>
 							</div>
-							<h1>김초밥</h1>
-							<ol>
-								<li>깻잎: 찬물 / 배합초 : 식초 3T, 설탕 2T, 소금 1t - 밥에 넣어 코팅.</li>
-								<li>생강: 얇게 편썰어 데친 후 배합초 절임 -> 장미모양.</li>
-								<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
-								<li>박고지: 불린 후 데치기 - 간장 2T+설탕 2T+미림2T+물1/2C,.</li>
-								<li>달걀: 설탕1/2t+맛술1t+소금1/4t - 체 - 달걀말이 후 사방 1cm</li>
-								<li>김 구운 후 함김 식히기 - 김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥
-									끝과 끝이 만나도록 말아주기 - 일정하게 8등분으로 썰기.</li>
-								<li>깻잎(5각형). 생강(장미) 올리고 김초밥 올려서 마무리.(+간장종지)</li>
-								<br />* 시간 없음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 박고지, 달걀말이, 오이 등 김초밥 속재료를 만드시오.
-								<br />나. 초밥초를 만들어 밥에 간하여 식히시오.
-								<br />다. 김초밥은 일정한 두께와 크기로 8등분하여 담으시오.
-								<br />라. 간장을 곁들여 제출하시오.
-							</ol>
-						</section>
-						<hr />
-						<section id="no10" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_144210.jpg" alt="picture 1"
-									width="560" height="340" align="center">
-							</div>
-							<h1>대합맑은국</h1>
-							<ol>
-								<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
-								<li>레몬: 오리발.</li>
-								<li>물 2C + 다시마 + 조개 - 끓기 시작하면 다시마 제거 -불순물 제거.</li>
-								<li>조게 입벌리면 건져 껍데기 한쪽 제거 - 완성접시에 담기.</li>
-								<li>면보에 육수 거른 후 간장, 청주, 소금 간하고 다시 끓여서 완성 접시 담기.</li>
-								<li>쑥갓 레몬 올려 마무리.</li>
-								<br />* 시간 여유 있음(쌩큐 아이템)
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 조개상태를 확인한 후 해감하여 사용하시오.
-								<br />나. 다시마와 백합조개를 넣어 끓으면 다시마를 건져내시오.
-							</ol>
-						</section>
-						<hr />
-						<section id="no11" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_162528.jpg" alt="picture 1"
-									width="560" height="340" align="center">
-							</div>
-							<h1>갑오징어명란무침</h1>
-							<ol>
-								<li>깻잎, 무순: 찬물.</li>
-								<li>갑오징어: 0.3cm로 두깨로 포 뜬 후 채 - 50도 청주물에 데치기.</li>
-								<li>명란젓: 알.</li>
-								<li>오징어 + 명란젓 = 3 : 1 (매화색) - 버무리기.</li>
-								<li>10시 깻잎 깔고 갑오징어무침 담고 무순 올려 마무리.</li>
-								<br />* 시간 많음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 명란젓은 껍질을 제거하고 알만 사용하시오.
-								<br />나. 갑오징어는 속껍질을 제거하여 사용하시오.
-								<br />다. 갑오징어를 두께 0.3cm 정도로 채썰어 청주를 섞은 물에 데쳐서 사용하시오.
-							</ol>
-						</section>
-						<hr />
-						<section id="no12" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_162530.jpg" alt="picture 1"
-									width="560" height="340" align="center">
-							</div>
-							<h1>야끼우동</h1>
-							<ol>
-								<li>숙주: 거두절미.</li>
-								<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
-								<li>새우: 내장 껍질 제거.</li>
-								<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
-								<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
-								<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주,
-									참기름 - 접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
-								<br />* 시간 없음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
-								<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
-								<br />다. 우동은 데쳐 사용하시오.
-								<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
-							</ol>
-						</section>
-						<hr />
-						<section id="no13" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_162530.jpg" alt="picture 1"
-									width="560" height="340" align="center">
-							</div>
-							<h1>소고기간장구이</h1>
-							<ol>
-								<li>다시물 1/2C.</li>
-								<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게
-									조리기.</li>
-								<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
-								<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
-								<li>팬에 기름 두르고 살짝 구운 후 다래소스 발라가며 굽기 + 미디엄.</li>
-								<li>고기 길이 3cm, 두께 1.5cm로 잘라 깻잎 위에 올리고 산초가루, 하리쇼가 올려 마무리.</li>
-								<br />* 시간 많음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 양념간장(다래)과 생강채(하리쇼가)를 준비하시오.
-								<br />나. 소고기를 두께 1.5cm, 길이 3cm로 자르시오.
-								<br />다. 프라이팬에 구이를 한 다음 양념간장(다래)을 발라 완성하시오.
-							</ol>
-						</section>
-						<hr />
-						<section id="no14" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_162530.jpg" alt="picture 1"
-									width="560" height="340" align="center">
-							</div>
-							<h1>된장국</h1>
-							<ol>
-								<li>가쓰오다시 2C.</li>
-								<li>미역: 불린 후 데치기(많이 불리면 안 데쳐도 됨) - 1~2cm 성형.</li>
-								<li>두부: 사방 1cm 후 데치기.</li>
-								<li>실파: 송송.</li>
-								<li>냄비에 가쓰오다시 2C - 끓으면 된장 1T + 청주 1T - 불순물 제거 - 두부 토렴(살짝
-									데치기).</li>
-								<li>완성 접시에 두부, 미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
-								<br />* 시간 많음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 다시마와 가다랑어포(가쓰오부시)로 가다랑어국물(가쓰오다시)을 만드시오.
-								<br />나. 1cm * 1cm * 1cm 로 썬 두부와 미역은 데쳐 사용하시오.
-								<br />다. 된장을 풀어 한소끔 끓여 내시오.
-							</ol>
-						</section>
-						<hr />
-						<section id="no15" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_162530.jpg" alt="picture 1"
-									width="560" height="340" align="center">
-							</div>
-							<h1>생선초밥</h1>
-							<ol>
-								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
-								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
-								<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
-								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
-								<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
-								<li>광어, 도미: 껍질 제거 후 7*3cm 포.</li>
-								<li>꽁치: 세장 뜨기 - 겉껍질 제거 후 잔 칼집.</li>
-								<li>밥: 오른손 / 생선: 왼손 - 와사비 올려 모양 잡기.</li>
-								<li>완성 접시 - 깻잎, 초생강(장미), 초밥 8개 + 간장종지 제출.</li>
-								<br />* 시간 없음
-								<br />
-								<br />
-								<h3>요구사항</h3>
-								<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
-								<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
-								<br />다. 곁들일 초생강을 만드시오.
-								<br />라. 쥔초밥(니기리스시)을 만드시오.
-								<br />마. 생선초밥 8개를 만들어 제출하시오.
-								<br />바. 간장을 곁들여 내시오.
-							</ol>
-						</section>
-						<hr />
 					</div>
+					<h1>도미조림</h1>
+					<ol>
+						<li>다시물 1C.</li>
+						<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 머리 2등분, 몸통과 꼬리 5Cm, 꼬리 V자 성형 -
+							소금, 데치기.</li>
+						<li>생강: 하리쇼가(얇게 채) - 찬물 / 꽈리고추 : 꼭지 제거.</li>
+						<li>우엉: 나무젓가락 굵기 - 찬물(갈변방지).</li>
+						<li>양념장: 다시물 1C, 간장, 설탕, 청주, 미림 각 3T 씩.</li>
+						<li>냄비에 우엉, 도미 + 양념장 2/3C 뚜껑 또는 호일 - 졸이기- 1/3C 양념장 넣고 꽈리고추(색
+							변하지 않게 주의) 넣어 윤기나게 졸이기.</li>
+						<li>완성접시에 도미 올리고, 우엉, 꽈리고추, 생강 올려 마무리.</li>
+						<br />* 시간 없음
+						<br />
+						<br />
+						<h3>요구사항</h3>
+						<br />가. 손질한 도미를 5~6cm로 자르고 머리는 반으로 갈라 소금을 뿌리시오.
+						<br />나. 머리와 꼬리는 데친 후 불순물을 제거하시오.
+						<br />다. 냄비에 앉혀 양념하여 조리하시오.
+						<br />라. 완성 후 접시에 담고 생강채(하리쇼가)와 채소를 앞쪽에 담아 내시오.
+					</ol>
+					</section>
+					<hr />
+					<section id="no9" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<br /> <br /> <br />
+						<div>
+							<img src="../images/20200516_144207.jpg" alt="picture 1"
+								width="560" height="340" align="center">
+						</div>
+						<div id="youtube">
+							<iframe width="513" height="312"
+								src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
+								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</div>
 				</div>
+				<h1>김초밥</h1>
+				<ol>
+					<li>깻잎: 찬물 / 배합초 : 식초 3T, 설탕 2T, 소금 1t - 밥에 넣어 코팅.</li>
+					<li>생강: 얇게 편썰어 데친 후 배합초 절임 -> 장미모양.</li>
+					<li>오이: 사방 1cm + 소금 - 행군 후 물기 제거.</li>
+					<li>박고지: 불린 후 데치기 - 간장 2T+설탕 2T+미림2T+물1/2C,.</li>
+					<li>달걀: 설탕1/2t+맛술1t+소금1/4t - 체 - 달걀말이 후 사방 1cm</li>
+					<li>김 구운 후 함김 식히기 - 김에 밥 2/3정도 펼친 후 재료(오보로,오이,계란,박고지) 넣고 밥 끝과
+						끝이 만나도록 말아주기 - 일정하게 8등분으로 썰기.</li>
+					<li>깻잎(5각형). 생강(장미) 올리고 김초밥 올려서 마무리.(+간장종지)</li>
+					<br />* 시간 없음
+					<br />
+					<br />
+					<h3>요구사항</h3>
+					<br />가. 박고지, 달걀말이, 오이 등 김초밥 속재료를 만드시오.
+					<br />나. 초밥초를 만들어 밥에 간하여 식히시오.
+					<br />다. 김초밥은 일정한 두께와 크기로 8등분하여 담으시오.
+					<br />라. 간장을 곁들여 제출하시오.
+				</ol>
+				</section>
 				<hr />
+				<section id="no10" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+					<br /> <br /> <br />
+					<div>
+						<img src="../images/20200516_144210.jpg" alt="picture 1"
+							width="560" height="340" align="center">
+					</div>
+					<div id="youtube">
+						<iframe width="513" height="312"
+							src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+					</div>
 			</div>
+			<h1>대합맑은국</h1>
+			<ol>
+				<li>조개: 소금물 해감 / 쑥갓: 찬물.</li>
+				<li>레몬: 오리발.</li>
+				<li>물 2C + 다시마 + 조개 - 끓기 시작하면 다시마 제거 -불순물 제거.</li>
+				<li>조게 입벌리면 건져 껍데기 한쪽 제거 - 완성접시에 담기.</li>
+				<li>면보에 육수 거른 후 간장, 청주, 소금 간하고 다시 끓여서 완성 접시 담기.</li>
+				<li>쑥갓 레몬 올려 마무리.</li>
+				<br />* 시간 여유 있음(쌩큐 아이템)
+				<br />
+				<br />
+				<h3>요구사항</h3>
+				<br />가. 조개상태를 확인한 후 해감하여 사용하시오.
+				<br />나. 다시마와 백합조개를 넣어 끓으면 다시마를 건져내시오.
+			</ol>
+			</section>
+			<hr />
+			<section id="no11" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+				<br /> <br /> <br />
+				<div>
+					<img src="../images/20200516_162528.jpg" alt="picture 1"
+						width="560" height="340" align="center">
+				</div>
+				<div id="youtube">
+					<iframe width="513" height="312"
+						src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
+						allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				</div>
 		</div>
+		<h1>갑오징어명란무침</h1>
+		<ol>
+			<li>깻잎, 무순: 찬물.</li>
+			<li>갑오징어: 0.3cm로 두깨로 포 뜬 후 채 - 50도 청주물에 데치기.</li>
+			<li>명란젓: 알.</li>
+			<li>오징어 + 명란젓 = 3 : 1 (매화색) - 버무리기.</li>
+			<li>10시 깻잎 깔고 갑오징어무침 담고 무순 올려 마무리.</li>
+			<br />* 시간 많음
+			<br />
+			<br />
+			<h3>요구사항</h3>
+			<br />가. 명란젓은 껍질을 제거하고 알만 사용하시오.
+			<br />나. 갑오징어는 속껍질을 제거하여 사용하시오.
+			<br />다. 갑오징어를 두께 0.3cm 정도로 채썰어 청주를 섞은 물에 데쳐서 사용하시오.
+		</ol>
+		</section>
+		<hr />
+		<section id="no12" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+			<br /> <br /> <br />
+			<div>
+				<img src="../images/20200516_162530.jpg" alt="picture 1" width="560"
+					height="340" align="center">
+			</div>
+			<div id="youtube">
+				<iframe width="513" height="312"
+					src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
+					allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+			</div>
+	</div>
+	<h1>야끼우동</h1>
+	<ol>
+		<li>숙주: 거두절미.</li>
+		<li>양파, 피망, 당근, 표고 : 4cm 채.</li>
+		<li>새우: 내장 껍질 제거.</li>
+		<li>오징어: 솔방울 무늬: 4cm*1cm 데치기.</li>
+		<li>끓는물에 면 삶아 찬물에 살짝 행굼.</li>
+		<li>팬-식용유 - 양파,당근,표고,새우,오징어-면-청주, 미림, 간장 각 1T 씩 - 청피망, 숙주, 참기름 -
+			접시에 담은 후 하나가쓰오 뿌려 마무리.</li>
+		<br />* 시간 없음
+		<br />
+		<br />
+		<h3>요구사항</h3>
+		<br />가. 새우는 껍질과 내장을 제거하고 사용하시오.
+		<br />나. 오징어는 솔방울무늬로 칼집을 넣어 1cm*4cm 정도 크기로 썰어서 데쳐 사용하시오.
+		<br />다. 우동은 데쳐 사용하시오.
+		<br />라. 가다랑어포(하나가쓰오)를 고명으로 얹으시오.
+	</ol>
+	</section>
+	<hr />
+	<section id="no13" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+		<br /> <br /> <br />
+		<div>
+			<img src="../images/20200516_162530.jpg" alt="picture 1" width="560"
+				height="340" align="center">
+		</div>
+		<h1>소고기간장구이</h1>
+		<ol>
+			<li>다시물 1/2C.</li>
+			<li>다래소스: 다시물4T + 간장 2T + 설탕 2T + 청주 2T + 맛술 2T - 윤기나고 걸죽하게 조리기.</li>
+			<li>깻잎: 찬물 - 성형 / 생강: 하리쇼가 - 찬물.</li>
+			<li>소고기: 핏물, 기름기 제거 후 연육 - 소금, 후추.</li>
+			<li>팬에 기름 두르고 살짝 구운 후 다래소스 발라가며 굽기 + 미디엄.</li>
+			<li>고기 길이 3cm, 두께 1.5cm로 잘라 깻잎 위에 올리고 산초가루, 하리쇼가 올려 마무리.</li>
+			<br />* 시간 많음
+			<br />
+			<br />
+			<h3>요구사항</h3>
+			<br />가. 양념간장(다래)과 생강채(하리쇼가)를 준비하시오.
+			<br />나. 소고기를 두께 1.5cm, 길이 3cm로 자르시오.
+			<br />다. 프라이팬에 구이를 한 다음 양념간장(다래)을 발라 완성하시오.
+		</ol>
+	</section>
+	<hr />
+	<section id="no14" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+		<br /> <br /> <br />
+		<div>
+			<img src="../images/20200516_162530.jpg" alt="picture 1" width="560"
+				height="340" align="center">
+		</div>
+		<div id="youtube">
+			<iframe width="513" height="312"
+				src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
+				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+	</div>
+	<h1>된장국</h1>
+	<ol>
+		<li>가쓰오다시 2C.</li>
+		<li>미역: 불린 후 데치기(많이 불리면 안 데쳐도 됨) - 1~2cm 성형.</li>
+		<li>두부: 사방 1cm 후 데치기.</li>
+		<li>실파: 송송.</li>
+		<li>냄비에 가쓰오다시 2C - 끓으면 된장 1T + 청주 1T - 불순물 제거 - 두부 토렴(살짝 데치기).</li>
+		<li>완성 접시에 두부, 미역 담고 육수 그릇의 8부 담고 실파, 산초가루 올려 마무리.</li>
+		<br />* 시간 많음
+		<br />
+		<br />
+		<h3>요구사항</h3>
+		<br />가. 다시마와 가다랑어포(가쓰오부시)로 가다랑어국물(가쓰오다시)을 만드시오.
+		<br />나. 1cm * 1cm * 1cm 로 썬 두부와 미역은 데쳐 사용하시오.
+		<br />다. 된장을 풀어 한소끔 끓여 내시오.
+	</ol>
+	</section>
+	<hr />
+	<section id="no15" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+		<br /> <br /> <br />
+		<div>
+			<img src="../images/20200516_162530.jpg" alt="picture 1" width="560"
+				height="340" align="center">
+		</div>
+		<div id="youtube">
+			<iframe width="513" height="312"
+				src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
+				allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+		</div>
+		</div>
+		<h1>생선초밥</h1>
+		<ol>
+			<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
+			<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
+			<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
+			<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
+			<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
+			<li>광어, 도미: 껍질 제거 후 7*3cm 포.</li>
+			<li>꽁치: 세장 뜨기 - 겉껍질 제거 후 잔 칼집.</li>
+			<li>밥: 오른손 / 생선: 왼손 - 와사비 올려 모양 잡기.</li>
+			<li>완성 접시 - 깻잎, 초생강(장미), 초밥 8개 + 간장종지 제출.</li>
+			<br />* 시간 없음
+			<br />
+			<br />
+			<h3>요구사항</h3>
+			<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
+			<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
+			<br />다. 곁들일 초생강을 만드시오.
+			<br />라. 쥔초밥(니기리스시)을 만드시오.
+			<br />마. 생선초밥 8개를 만들어 제출하시오.
+			<br />바. 간장을 곁들여 내시오.
+		</ol>
+	</section>
+	<hr />
+	</div>
+	</div>
+	<hr />
+	</div>
+	</div>
 	</div>
 
 	{{> include/footer}}
