--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -605,46 +605,48 @@
 						<hr />
 						<section id="no15" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
-							<div>
-								<img src="../images/20200516_162530.jpg" alt="picture 1"
-									width="560" height="340" align="center">
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/20200516_162530.jpg" alt="picture 1"
+										width="560" height="340" align="center">
+								</div>
+								<div id="youtube">
+									<iframe width="513" height="312"
+										src="https://www.youtube.com/embed/SCaYHUfW81g"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
 							</div>
-							<div id="youtube">
-								<iframe width="513" height="312"
-									src="https://www.youtube.com/embed/SCaYHUfW81g" frameborder="0"
-									allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-									allowfullscreen></iframe>
-							</div>
+							<h1>생선초밥</h1>
+							<ol>
+								<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
+								<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
+								<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
+								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
+								<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
+								<li>광어, 도미: 껍질 제거 후 7*3cm 포.</li>
+								<li>꽁치: 세장 뜨기 - 겉껍질 제거 후 잔 칼집.</li>
+								<li>밥: 오른손 / 생선: 왼손 - 와사비 올려 모양 잡기.</li>
+								<li>완성 접시 - 깻잎, 초생강(장미), 초밥 8개 + 간장종지 제출.</li>
+								<br />* 시간 없음
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
+								<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
+								<br />다. 곁들일 초생강을 만드시오.
+								<br />라. 쥔초밥(니기리스시)을 만드시오.
+								<br />마. 생선초밥 8개를 만들어 제출하시오.
+								<br />바. 간장을 곁들여 내시오.
+							</ol>
+						</section>
+						<hr />
 					</div>
-					<h1>생선초밥</h1>
-					<ol>
-						<li>배합초: 식초 3T + 설탕 2T + 소금 1t - 밥 코팅 .</li>
-						<li>깻잎: 찬물 / 생강: 편썰어 데쳐 배합초 - 장미 / 와사비: 물과 동량.</li>
-						<li>새우: 머리,내장, 물총 제거 후 꼬치 꽂아 삶아서 껍질 제거 후 반으로 펼침.</li>
-						<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
-						<li>참치: 소금물 - 7*3*0.5cm 직사각형.</li>
-						<li>광어, 도미: 껍질 제거 후 7*3cm 포.</li>
-						<li>꽁치: 세장 뜨기 - 겉껍질 제거 후 잔 칼집.</li>
-						<li>밥: 오른손 / 생선: 왼손 - 와사비 올려 모양 잡기.</li>
-						<li>완성 접시 - 깻잎, 초생강(장미), 초밥 8개 + 간장종지 제출.</li>
-						<br />* 시간 없음
-						<br />
-						<br />
-						<h3>요구사항</h3>
-						<br />가. 각 생선류와 채소를 초밥용으로 손질하시오.
-						<br />나. 초밥초(스시스)를 만들어 밥에 간하여 식히시오.
-						<br />다. 곁들일 초생강을 만드시오.
-						<br />라. 쥔초밥(니기리스시)을 만드시오.
-						<br />마. 생선초밥 8개를 만들어 제출하시오.
-						<br />바. 간장을 곁들여 내시오.
-					</ol>
-					</section>
-					<hr />
 				</div>
+				<hr />
 			</div>
-			<hr />
 		</div>
-	</div>
 	</div>
 
 	{{> include/footer}}
