--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -368,11 +368,11 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_163756.jpg" alt="picture 8"
-										width="560" height="340" align="center">
+										width="513" height="312" align="center">
 								</div>
 								<div id="youtube">
 									<iframe width="513" height="312"
-										src="https://www.youtube.com/embed/SCaYHUfW81g"
+										src="https://www.youtube.com/embed/Pkd46M8AuWI"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen></iframe>
