--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -404,7 +404,7 @@
 							<br /> <br /> <br />
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_144207.jpg" alt="picture 1"
+									<img src="../images/20200516_144207.jpg" alt="picture 9"
 										width="513" height="312" align="center">
 								</div>
 								<div id="youtube">
@@ -440,7 +440,7 @@
 							<br /> <br /> <br />
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_144210.jpg" alt="picture 1"
+									<img src="../images/20200516_144210.jpg" alt="picture 10"
 										width="513" height="312" align="center">
 								</div>
 								<div id="youtube">
@@ -472,7 +472,7 @@
 							<br /> <br /> <br />
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_162528.jpg" alt="picture 1"
+									<img src="../images/20200516_162528.jpg" alt="picture 11"
 										width="513" height="312" align="center">
 								</div>
 								<div id="youtube">
@@ -504,12 +504,12 @@
 							<br /> <br /> <br />
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_162530.jpg" alt="picture 1"
-										width="560" height="340" align="center">
+									<img src="../images/20200516_162530.jpg" alt="picture 12"
+										width="513" height="312" align="center">
 								</div>
 								<div id="youtube">
 									<iframe width="513" height="312"
-										src="https://www.youtube.com/embed/SCaYHUfW81g"
+										src="https://www.youtube.com/embed/FBtL0BaVpNg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen></iframe>
