--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -612,7 +612,7 @@
 								</div>
 								<div id="youtube">
 									<iframe width="513" height="312"
-										src="https://www.youtube.com/embed/SCaYHUfW81g"
+										src="https://www.youtube.com/embed/9xG6Hl4FSpk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen></iframe>
