--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -21,7 +21,7 @@
 			<br />
 			<div class="row content">
 				<div class="col-sm-3 sidenav" style="background-color: #c4f9fc;">
-					<h3 style="background-color: #c4f6fc;">
+					<h3 style="background-color: #c4f6fc;" align = "center">
 						<span style="color: #0d26be;">Food Blog</span>
 					</h3>
 					<br />
